[package]
name = "tab5-screen-streamer"
description = "Stream PC Screen Capture to M5Stack Tab5"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
fast_image_resize = "5.3.0"
rusb = "0.9.4"
scap = "0.0.8"
tokio = { version = "1.47.1", features = ["sync"] }
turbojpeg = "1.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-media-rs = "0.3.5"
core-video-rs = "0.3.5"
screencapturekit = "0.3.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"
